...
  componentWillMount () {
    this.fetchDeviceDetails()
  }

  render () {
    return (
      <View style={styles.container} testID='deviceDetailScreen'>
        <FlatList
          contentContainerStyle={styles.listContent}
          data={this.state.dataObjects}
          renderItem={this.renderRow}
          keyExtractor={this.keyExtractor}
          initialNumToRender={this.oneScreensWorth}
...
